// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeOptions contentBase array should set correct options 1`] = `
Object {
  "contentBase": Array [
    "/path/to/dist1",
    "/path/to/dist2",
  ],
  "contentBasePublicPath": "/",
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions contentBase string should set correct options 1`] = `
Object {
  "contentBase": "/path/to/dist",
  "contentBasePublicPath": "/",
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions contentBasePublicPath string should set correct options 1`] = `
Object {
  "contentBasePublicPath": "/content-base-public-path",
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions no options should set correct options 1`] = `
Object {
  "contentBasePublicPath": "/",
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode custom client path should set correct options 1`] = `
Object {
  "contentBasePublicPath": "/",
  "transportMode": Object {
    "client": "/path/to/custom/client/",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode custom server class should set correct options 1`] = `
Object {
  "contentBasePublicPath": "/",
  "transportMode": Object {
    "client": "ws",
    "server": [Function],
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode custom server path should set correct options 1`] = `
Object {
  "contentBasePublicPath": "/",
  "transportMode": Object {
    "client": "ws",
    "server": "/path/to/custom/server/",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode sockjs string should set correct options 1`] = `
Object {
  "contentBasePublicPath": "/",
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode ws object should set correct options 1`] = `
Object {
  "contentBasePublicPath": "/",
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode ws string should set correct options 1`] = `
Object {
  "contentBasePublicPath": "/",
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions watchOptions should set correct options 1`] = `
Object {
  "contentBasePublicPath": "/",
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {
    "poll": true,
  },
}
`;
